# geoparquet-testing

./: .gitignore  CHANGELOG.md  README.md
bad_data/: README.md  bbox-does-not-contain-geometry.parquet  crs-invalid-projjson.parquet  crs-mismatch-schema-vs-geo-metadata.parquet  edges-spherical-with-planar-antimeridian-line.parquet  epoch-on-unsupported-crs.parquet  geo-invalid-json.parquet  geo-invalid-utf8.parquet  geometry-types-mismatch-declared-point-actual-linestring.parquet  geometry-types-missing-actual-type.parquet  manifest.json  missing-columns.parquet  missing-geo-metadata.parquet  missing-primary-column.parquet  missing-version.parquet  orientation-ccw-declared-rings-cw.parquet  primary-column-not-in-columns.parquet  version-1-0-with-2-0-features.parquet  (+6 more)
scripts/: README.md  bad_helpers.py  gen_bad_data.py  gen_compression.py  gen_crs.py  gen_edges.py  gen_encodings.py  gen_epoch.py  gen_geography.py  gen_multi_geometry.py  gen_orientation.py  gen_samples.py  gen_zm.py  generate_all.py  pyproject.toml
scripts/gpqgen/: __init__.py  crs.py  metadata.py  paths.py  write.py
scripts/samples/: __init__.py  airports_global.py  australia_gnss.py  bathymetry_contours.py  buildings_3d.py  buildings_with_centroid.py  flight_routes.py  gps_trajectory.py  us_states.py
scripts/schemas/: README.md
scripts/tests/: test_bad_data.py  test_compression.py  test_crs.py  test_edges.py  test_encodings.py  test_epoch.py  test_helpers.py  test_multi_geometry.py  test_orientation.py  test_readme_indices.py  test_samples.py  test_schema_validation.py  test_zm.py
(+54 files in other folders)
